--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,3 +26,12 @@ jobs:
           database: ${{ secrets.DATABASE }}
           cluster: ${{ secrets.CLUSTER }}
           ingest: ${{ secrets.INGEST }}
+
+      - name: Publish Unit Test Results
+        uses: EnricoMi/publish-unit-test-result-action@v2
+        if: always()
+        with:
+          files: |
+            target/surefire-reports/*.xml
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v2
