--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,11 @@ jobs:
         if: always()
         with:
           files: |
-            target/surefire-reports/*.xml
             target/failsafe-reports/*.xml
+
+      - name: Publish Insurance Test Results
+        if: always()
+        uses: scacap/action-surefire-report@v1
+
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v2
