* Fix workflow permissions in build file

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,6 +8,10 @@ jobs:
   build:
     name: Maven Build
     runs-on: ubuntu-latest
+    # Permissions block is optional, useful for dependabot checks
+    permissions:
+      checks: write
+      contents: read    
     steps:
       - uses: actions/checkout@v3
       - name: Setup Java 8
