--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,11 +8,20 @@ jobs:
   build:
     name: Maven Build
     runs-on: ubuntu-latest
+    environment: build
     # Permissions block is optional, useful for dependabot checks
     permissions:
       checks: write
-      contents: read    
+      pull-requests: write
+      id-token: write
+      contents: read
     steps:
+      - name: Azure login
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.APP_ID }}
+          tenant-id: ${{ secrets.TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
       - uses: actions/checkout@v3
       - name: Setup Java 8
         uses: actions/setup-java@v3
