--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
         <awaitility.version>4.2.2</awaitility.version>
         <az.core.version>1.54.1</az.core.version>
         <az.identity.version>1.15.2</az.identity.version>
-        <az.netty.version>1.15.9</az.netty.version>
+        <az.netty.version>1.15.10</az.netty.version>
         <commoncodec.version>1.17.1</commoncodec.version>
         <commonio.version>2.16.1</commonio.version>
         <dependency-check-maven.version>10.0.2</dependency-check-maven.version>
@@ -106,6 +106,14 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <version>${mvn.failsafe.plugin.version}</version>
+                <configuration>
+                    <properties>
+                        <configurationParameters>
+                            junit.jupiter.execution.parallel.enabled = true
+                            junit.jupiter.execution.parallel.mode.default = concurrent
+                        </configurationParameters>
+                    </properties>
+                </configuration>
                 <executions>
                     <execution>
                         <goals>
@@ -286,6 +294,12 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
