--- a/pom.xml
+++ b/pom.xml
@@ -8,36 +8,39 @@
     <artifactId>kafka-sink-azure-kusto</artifactId>
     <packaging>jar</packaging>
     <description>A Kafka Connect plugin for Azure Data Explorer (Kusto) Database</description>
-    <version>4.1.4</version>
+    <version>5.0.0</version>
     <properties>
+        <!-- Compile dependencies -->
+        <az.core.version>1.55.5</az.core.version>
+        <az.identity.version>1.16.3</az.identity.version>
+        <commoncodec.version>1.19.0</commoncodec.version>
+        <commonio.version>2.20.0</commonio.version>
+        <kusto.sdk.version>7.0.2</kusto.sdk.version>
+        <kafka.version>3.9.0</kafka.version>
+        <!-- Test dependencies -->
         <avro.random.generator.version>0.4.1</avro.random.generator.version>
-        <awaitility.version>4.2.2</awaitility.version>
-        <az.core.version>1.54.1</az.core.version>
-        <az.identity.version>1.15.2</az.identity.version>
-        <az.netty.version>1.15.10</az.netty.version>
-        <commoncodec.version>1.17.1</commoncodec.version>
-        <commonio.version>2.16.1</commonio.version>
-        <dependency-check-maven.version>10.0.2</dependency-check-maven.version>
-        <formatter.version>2.16.0</formatter.version>
-        <impsort.version>1.6.2</impsort.version>
-        <java.release.version>1.8</java.release.version>
+        <awaitility.version>4.3.0</awaitility.version>
         <jsonassert.version>1.5.3</jsonassert.version>
         <junit.version>5.11.0</junit.version>
+        <mockito.version>5.11.0</mockito.version>
+        <testcontainer.version>1.21.3</testcontainer.version>
+        <!-- Provided dependencies -->
         <kafka.connect.avro.converter.version>7.8.0</kafka.connect.avro.converter.version>
-        <kafka.version>3.9.0</kafka.version>
-        <kusto.sdk.version>5.2.0</kusto.sdk.version>
-        <mockito.version>4.11.0</mockito.version>
-        <mvn.assembly.plugin.version>3.2.0</mvn.assembly.plugin.version>
-        <mvn.compiler.plugin.version>3.11.0</mvn.compiler.plugin.version>
-        <mvn.failsafe.plugin.version>3.0.0</mvn.failsafe.plugin.version>
+        <!-- Plugin dependencies -->
+        <dependency-check-maven.version>12.1.3</dependency-check-maven.version>
+        <extra.enforcer.rules.version>1.7.0</extra.enforcer.rules.version>
+        <formatter.version>2.27.0</formatter.version>
+        <impsort.version>1.6.2</impsort.version>
+        <maven.enforcer.plugin.version>3.6.1</maven.enforcer.plugin.version>
+        <mvn.assembly.plugin.version>3.7.1</mvn.assembly.plugin.version>
+        <mvn.compiler.plugin.version>3.14.0</mvn.compiler.plugin.version>
+        <mvn.failsafe.plugin.version>3.5.3</mvn.failsafe.plugin.version>
         <mvn.surefire.plugin.version>3.0.0</mvn.surefire.plugin.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <testcontainer.version>1.20.1</testcontainer.version>
-        <kusto.shade.prefix>kusto_kafka_connector_shaded</kusto.shade.prefix>
-        <maven.enforcer.plugin.version>3.6.1</maven.enforcer.plugin.version>
-        <maven.shade.plugin.version>3.5.0</maven.shade.plugin.version>
         <source.java.version>11</source.java.version>
-        <extra.enforcer.rules.version>1.7.0</extra.enforcer.rules.version>
+        <!-- Shade plugin -->
+        <maven.shade.plugin.version>3.4.0</maven.shade.plugin.version>
+        <kusto.shade.prefix>kusto_kafka_connector_shaded</kusto.shade.prefix>
     </properties>
     <build>
         <plugins>
@@ -96,7 +99,7 @@
             <plugin>
                 <groupId>io.confluent</groupId>
                 <artifactId>kafka-connect-maven-plugin</artifactId>
-                <version>0.11.1</version>
+                <version>0.12.0</version>
                 <executions>
                     <execution>
                         <goals>
@@ -555,54 +558,11 @@
             <groupId>com.microsoft.azure.kusto</groupId>
             <artifactId>kusto-data</artifactId>
             <version>${kusto.sdk.version}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>com.azure</groupId>
-                    <artifactId>azure-identity</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>com.azure</groupId>
-                    <artifactId>azure-core</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>com.azure</groupId>
-                    <artifactId>azure-core-http-netty</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        <dependency>
-            <groupId>com.azure</groupId>
-            <artifactId>azure-identity</artifactId>
-            <version>${az.identity.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.azure</groupId>
-            <artifactId>azure-core</artifactId>
-            <version>${az.core.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.azure</groupId>
-            <artifactId>azure-core-http-netty</artifactId>
-            <version>${az.netty.version}</version>
         </dependency>
         <dependency>
             <groupId>com.microsoft.azure.kusto</groupId>
             <artifactId>kusto-ingest</artifactId>
             <version>${kusto.sdk.version}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>com.azure</groupId>
-                    <artifactId>azure-identity</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>com.azure</groupId>
-                    <artifactId>azure-core</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>com.azure</groupId>
-                    <artifactId>azure-core-http-netty</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
         <dependency>
             <groupId>commons-codec</groupId>
@@ -644,6 +604,12 @@
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
             <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>${testcontainer.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
