--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>kafka-sink-azure-kusto</artifactId>
     <packaging>jar</packaging>
     <description>A Kafka Connect plugin for Azure Data Explorer (Kusto) Database</description>
-    <version>5.0.0</version>
+    <version>5.1.0</version>
     <properties>
         <!-- Compile dependencies -->
         <az.core.version>1.55.5</az.core.version>
@@ -16,33 +16,34 @@
         <az.core.http.netty.version>1.15.13</az.core.http.netty.version>
         <commoncodec.version>1.19.0</commoncodec.version>
         <commonio.version>2.20.0</commonio.version>
-        <json.smart.version>2.5.2</json.smart.version>
+        <json.smart.version>2.6.0</json.smart.version>
         <kusto.sdk.version>7.0.2</kusto.sdk.version>
-        <kafka.version>3.9.0</kafka.version>
+        <kafka.version>4.0.0</kafka.version>
         <msal4j.version>1.22.0</msal4j.version>
         <!-- Test dependencies -->
         <avro.random.generator.version>0.4.1</avro.random.generator.version>
         <awaitility.version>4.3.0</awaitility.version>
         <jsonassert.version>1.5.3</jsonassert.version>
         <junit.version>5.11.0</junit.version>
-        <mockito.version>5.11.0</mockito.version>
+        <mockito.version>5.18.0</mockito.version>
         <testcontainer.version>1.21.3</testcontainer.version>
         <!-- Provided dependencies -->
-        <kafka.connect.avro.converter.version>7.8.0</kafka.connect.avro.converter.version>
+        <kafka.connect.avro.converter.version>8.0.0</kafka.connect.avro.converter.version>
         <!-- Plugin dependencies -->
         <dependency-check-maven.version>12.1.3</dependency-check-maven.version>
-        <extra.enforcer.rules.version>1.7.0</extra.enforcer.rules.version>
+        <extra.enforcer.rules.version>1.10.0</extra.enforcer.rules.version>
         <formatter.version>2.27.0</formatter.version>
-        <impsort.version>1.6.2</impsort.version>
+        <spotless.version>2.41.1</spotless.version>
         <maven.enforcer.plugin.version>3.6.1</maven.enforcer.plugin.version>
         <mvn.assembly.plugin.version>3.7.1</mvn.assembly.plugin.version>
         <mvn.compiler.plugin.version>3.14.0</mvn.compiler.plugin.version>
         <mvn.failsafe.plugin.version>3.5.3</mvn.failsafe.plugin.version>
         <mvn.surefire.plugin.version>3.0.0</mvn.surefire.plugin.version>
+        <plexus.version>4.0.2</plexus.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <source.java.version>11</source.java.version>
+        <source.java.version>21</source.java.version>
         <!-- Shade plugin -->
-        <maven.shade.plugin.version>3.4.0</maven.shade.plugin.version>
+        <maven.shade.plugin.version>3.6.0</maven.shade.plugin.version>
         <kusto.shade.prefix>kusto_kafka_connector_shaded</kusto.shade.prefix>
     </properties>
     <build>
@@ -76,12 +77,11 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${mvn.compiler.plugin.version}</version>
                 <configuration>
-                    <source>${source.java.version}</source>
-                    <target>${source.java.version}</target>
                     <encoding>${project.build.sourceEncoding}</encoding>
                     <compilerArgs>
                         <arg>-Xlint:deprecation</arg>
                     </compilerArgs>
+          <release>21</release>
                 </configuration>
                 <executions>
                     <execution>
@@ -169,32 +169,15 @@
             </plugin>
             <!-- Makes it easier to have consist import order -->
             <plugin>
-                <groupId>net.revelc.code</groupId>
-                <artifactId>impsort-maven-plugin</artifactId>
-                <version>${impsort.version}</version>
-                <dependencies>
-                    <!-- Needed because of maven 3.9.0 backward compatibility issue,
-                         See : https://github.com/eclipse/leshan/issues/1410 -->
-                    <dependency>
-                        <groupId>org.codehaus.plexus</groupId>
-                        <artifactId>plexus-utils</artifactId>
-                        <version>3.5.1</version>
-                    </dependency>
-                </dependencies>
+                <groupId>com.diffplug.spotless</groupId>
+                <artifactId>spotless-maven-plugin</artifactId>
+                <version>${spotless.version}</version>
                 <configuration>
-                    <groups>java.,javax.,org.,com.</groups>
-                    <removeUnused>true</removeUnused>
-                    <staticAfter>true</staticAfter>
-                    <!-- <staticGroups>java.,javax.,org.w3c.,org.xml.,junit.</staticGroups> -->
+                    <java>
+                        <importOrder/>
+                        <removeUnusedImports/>
+                    </java>
                 </configuration>
-                <executions>
-                    <execution>
-                        <id>sort-imports</id>
-                        <goals>
-                            <goal>sort</goal><!-- runs at process-sources phase by default -->
-                        </goals>
-                    </execution>
-                </executions>
             </plugin>
             <plugin>
                 <groupId>org.owasp</groupId>
@@ -530,6 +513,24 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.openrewrite.maven</groupId>
+                <artifactId>rewrite-maven-plugin</artifactId>
+                <version>6.15.0</version>
+                <configuration>
+                    <exportDatatables>true</exportDatatables>
+                    <activeRecipes>
+                        <recipe>org.openrewrite.java.migrate.UpgradeToJava21</recipe>
+                    </activeRecipes>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.openrewrite.recipe</groupId>
+                        <artifactId>rewrite-migrate-java</artifactId>
+                        <version>3.14.1</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
         </plugins>
         <resources>
             <resource>
@@ -617,6 +618,17 @@
             <groupId>com.azure</groupId>
             <artifactId>azure-core-http-netty</artifactId>
             <version>${az.core.http.netty.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>io.projectreactor.netty</groupId>
+                    <artifactId>reactor-netty-http</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>io.projectreactor.netty</groupId>
+            <artifactId>reactor-netty-http</artifactId>
+            <version>1.2.8</version>
         </dependency>
         <dependency>
             <groupId>com.microsoft.azure</groupId>
